--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.0)
 set(CMAKE_C_COMPILER_WORKS 1)
 set(CMAKE_CXX_COMPILER_WORKS 1)
 
-project(stm32_experiments)
+project(stm32_template)
 
 set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
@@ -47,13 +47,13 @@ add_definitions(-DSTM32F10X_MD)
 include_directories(cmsis)
 include_directories(stm32)
 include_directories(custom_lib/utils)
-add_subdirectory(custom_lib)
+#add_subdirectory(custom_lib)
 
 set(SOURCE_FILES
     stm32/startup/startup_stm32f10x_md.c # Choose startup file for your MCU
     stm32/system_stm32f10x.c
     syscalls/syscalls.c
-    custom_lib/src/utils.c
+    #custom_lib/src/utils.c
     main.c)
 
 
